# xamla-xgl

./: .gitignore  CMakeLists.txt  README.md  install-deps.sh  xamla-xgl-scm-1.rockspec  xgl.project  xgl.workspace
examples/: .gitignore  basics.lua  cylinder.lua  geo_objects.lua  gripper_tracker.lua  gripperfit.lua  projectModelpointToImage.lua  renderdepth.lua  sphere.lua  targetpose.lua
examples/data/: 0901.stl  intrinsic.t7  rgb_camIntrinsics_v2.t7  xamla_jaw_weiss_w3.stl
lua/: Camera.lua  Material.lua  Mesh.lua  Model.lua  Shader.lua  SimpleScene.lua  env.lua  geo.lua  init.lua  utils.lua
shaders/: Axis.VertexShader.glsl  Basic.VertexShader.glsl  BasicLighting.FragmentShader.glsl  FullScreen.FragmentShader.glsl  FullScreen.VertexShader.glsl  Lighting.FragmentShader.glsl  Paper.FragmentShader.glsl  Paper.VertexShader.glsl
src/: axis.h  camera.h  light.h  material.h  mesh.h  model.h  shader.h  simple_scene.h  tensor_conversion.h  xamla-gl.cpp  xamla-gl.h
